Progress on Junk Remover; start of Jobs

--- a/src/com/groksoft/els/resources/junkremover_en_US.html
+++ b/src/com/groksoft/els/resources/junkremover_en_US.html
@@ -38,23 +38,18 @@ This tool can be applied to:
     <li>Collection</li>
     <li>Library</li>
     <li>Directory</li>
+    <li>File</li>
 </ul>
+
 <h3>Junk Pattern</h3>
 Patterns are similar to common command line wildcard patterns.
 <ul>
     <li>? = a single character</li>
     <li>* = zero or more characters</li>
 </ul>
+
 <h3>Case?</h3>
 Enable to make the pattern case-sensitive. Disable for case-insensitive.
 
-<h2>Command Line</h2>
-<ul>
-    <li>-D | --dry-run</li>
-    <li>-l | --library [name] : Library to process, no name means all libraries</li>
-    <li>-L | --exclude [name] : Library to exclude, name required</li>
-    <li>-p | --publisher : Run on publisher</li>
-    <li>-s | --subscriber : Run on subscriber</li>
-</ul>
 </body>
 </html>
