Added Jar for Java 11 compatibility

--- a/src/com/groksoft/els/resources/controls_en_US.html
+++ b/src/com/groksoft/els/resources/controls_en_US.html
@@ -66,7 +66,7 @@
         <td>Refresh</td> <td>F5</td>
     </tr>
     <tr>
-        <td>Open</td> <td>Enter, Double-Click</td>
+        <td>Launch</td> <td>Enter, Double-Click</td>
         <td>Show Hidden</td> <td>Ctrl-H</td>
     </tr>
 </table>
