--- a/src/com/groksoft/els/resources/jobs_en_US.html
+++ b/src/com/groksoft/els/resources/jobs_en_US.html
@@ -41,14 +41,25 @@ The Add button for Tasks displays a list of Tools that have been created previou
 The list of Tools is updated each time the button is clicked.
 
 <h3>Task Origins</h3>
-Select the publisher and/or subscriber accordingly.
+Select the publisher and/or subscriber accordingly by clicking the ... button.
 <ul>
   <li>"Any publisher" will use any loaded publisher</li>
-  <li>"Current publisher" will match the exact key of the currently-loaded publisher when this origin was added</li>
+  <li>"Specific publisher" allows selection of a publisher from the list of libraries</li>
   <li>"Any subscriber" will use any loaded subscriber</li>
-  <li>"Current subscriber" will match the exact key of the currently-loaded subscriber when this origin was added</li>
+  <li>"Specific subscriber" allows section of a subscriber from the list of libraries</li>
 </ul>
-The Add button uses <i>whatever is currently selected in the Browser</i>.
+The Add button uses <i><b>whatever</b> is currently selected in the Browser</i>. That means
+combinations can be assembled that do not necessarily make sense or will execute correctly.
+
+<h3>Generate</h3>
+The Generate button creates a <i>basic</i> command line to execute the currently-selected
+job. Depending on your choices <b>additional parameters may be required</b> for the
+command line to run correctly. In particular, if "Any publisher" or "Any subscriber" has
+been selected for the job then -p and/or -s parameters <i>will</i> needed.
+
+<br/>
+<br/>
+<br/>
 
 </body>
 </html>
