--- a/src/com/groksoft/els/resources/jobs_en_US.html
+++ b/src/com/groksoft/els/resources/jobs_en_US.html
@@ -53,8 +53,10 @@ combinations can be assembled that do not necessarily make sense or will execute
 
 <h3>Generate</h3>
 The Generate button creates a <i>basic</i> command line to execute the currently-selected
-job. Depending on your choices <b>additional parameters may be required</b> for the
-command line to run correctly. In particular, if "Any publisher" or "Any subscriber" has
+job. Edit and copy (Ctrl-C) as desired.<br/>
+<br/>
+Depending on your choices additional parameters may be required for the
+command line job to run correctly. In particular, if "<b>Any publisher</b>" or "<b>Any subscriber</b>" has
 been selected for the job then -p and/or -s parameters <i>will</i> needed.
 
 <br/>
