--- a/src/com/groksoft/els/resources/jobs_en_US.html
+++ b/src/com/groksoft/els/resources/jobs_en_US.html
@@ -41,12 +41,13 @@ The Add button for Tasks displays a list of Tools that have been created previou
 The list of Tools is updated each time the button is clicked.
 
 <h3>Task Origins</h3>
-Select the publisher and/or subscriber accordingly by clicking the ... button.
+Select the publisher and/or subscriber accordingly by clicking the "..." button.
 <ul>
   <li>"Any publisher" will use any loaded publisher</li>
   <li>"Specific publisher" allows selection of a publisher from the list of libraries</li>
   <li>"Any subscriber" will use any loaded subscriber</li>
-  <li>"Specific subscriber" allows section of a subscriber from the list of libraries</li>
+  <li>"Local subscriber" allows section of a local subscriber from the list of libraries</li>
+  <li>"Remote subscriber" allows section of a remote subscriber from the list of libraries</li>
 </ul>
 The Add button uses <i><b>whatever</b> is currently selected in the Browser</i>. That means
 combinations can be assembled that do not necessarily make sense or will execute correctly.
