--- a/src/com/groksoft/els/resources/emptydirectoryfinder_en_US.html
+++ b/src/com/groksoft/els/resources/emptydirectoryfinder_en_US.html
@@ -33,10 +33,16 @@
 </head>
 <body>
 <h2>Empty Directory Finder</h2>
-This is a manual tool. It will not appear in the Jobs list of available tools.
+This is a manual tool that may be run on an ELS Collection. System folders are not supported.
+Works locally or remotely.
+<p>
+    This tool will not appear in the Jobs list of available tools.
 
-<h3>Auto-delete</h3>
-Enable for the tool to automatically delete empty directories as they are found.
+<h3>Run button</h3>
+Runs the finder on the selected Browser collection, publisher or subscriber.
+
+<h3>Delete button</h3>
+Deletes the selected empty directories from the list.
 
 </body>
 </html>
