Duplicate Finder tool code complete #60; Enhancements to Empty Directory Finder #61

--- a/src/com/groksoft/els/resources/duplicatefinder_en_US.html
+++ b/src/com/groksoft/els/resources/duplicatefinder_en_US.html
@@ -36,10 +36,17 @@
 This is a manual tool that may be run on an ELS Collection. System folders are not supported.
 Works locally or remotely.
 <p>
-    This tool will not appear in the Jobs list of available tools.
+This tool will not appear in the Jobs list of available tools.
+
+<h3>Cross-check</h3>
+Normally duplicates are only checked within each library. With cross-check enabled items are
+checked across all libraries.
 
 <h3>Run button</h3>
 Runs the finder on the selected Browser collection, publisher or subscriber.
+
+<h3>Go button</h3>
+The Go button navigates to the item in the Browser.
 
 </body>
 </html>
