Added Hint Server to Operations tab for #63; added "Click New" panel to Renamer for #59

--- a/src/com/groksoft/els/resources/jobs_en_US.html
+++ b/src/com/groksoft/els/resources/jobs_en_US.html
@@ -33,7 +33,7 @@
 </head>
 <body>
 <h2>Jobs</h2>
-Jobs execute defined Tasks in the sequence defined. A Task is a defined Tool with
+Jobs execute defined Tasks in the sequence specified. A Task is a defined Tool with
 starting Origin(s) as arguments to the Tool.
 
 <h3>Tasks</h3>
