--- a/src/com/groksoft/els/resources/operations_en_US.html
+++ b/src/com/groksoft/els/resources/operations_en_US.html
@@ -33,14 +33,14 @@
 </head>
 <body>
 <h2>Operations</h2>
-The Operations tab defines parameters and options for executing ELS in one of the
-various modes.
-
+<p>The Operations tab defines parameters and options for executing ELS in one of the
+various modes.</p>
+<br/>
 Named configurations may be executed:
 <ul>
   <li>Using the Run button</li>
-  <li>From the command line by copying the value from the Generate button</li>
   <li>Added as a Task in a Job</li>
+  <li>From the command line by copying the value from the Generate button</li>
 </ul>
 
 Respectively, the publisher and subscriber for execution come from:
