--- a/src/com/groksoft/els/resources/renamer_en_US.html
+++ b/src/com/groksoft/els/resources/renamer_en_US.html
@@ -39,6 +39,12 @@ This tool may be applied to:
     <li>File</li>
 </ul>
 
+Named configurations may be executed:
+<ul>
+    <li>Using the Run button</li>
+    <li>Added as a Task in a Job</li>
+</ul>
+
 <h3>Common Options</h3>
 <ul>
     <li>Recursive, process any selected directories and subdirectories recursively.<br><br></li>
