--- a/src/com/groksoft/els/resources/junkremover_en_US.html
+++ b/src/com/groksoft/els/resources/junkremover_en_US.html
@@ -41,6 +41,12 @@ This tool may be applied to:
     <li>File</li>
 </ul>
 
+Named configurations may be executed:
+<ul>
+    <li>Using the Run button</li>
+    <li>Added as a Task in a Job</li>
+</ul>
+
 <h3>Junk Pattern</h3>
 Patterns are similar to common command line wildcard patterns.
 <ul>
