Button handling changes for #47

--- a/src/com/groksoft/els/resources/emptydirectoryfinder_en_US.html
+++ b/src/com/groksoft/els/resources/emptydirectoryfinder_en_US.html
@@ -35,8 +35,8 @@
 <h2>Empty Directory Finder</h2>
 This is a manual tool that may be run on an ELS Collection. System folders are not supported.
 Works locally or remotely.
-<p>
-This tool will not appear in the Jobs list of available tools.
+
+<p>This tool will not appear in the Jobs list of available tools.</p>
 
 <h3>Run button</h3>
 Runs the finder on the selected Browser collection, publisher or subscriber.
