--- a/src/com/groksoft/els/resources/duplicatefinder_en_US.html
+++ b/src/com/groksoft/els/resources/duplicatefinder_en_US.html
@@ -35,8 +35,8 @@
 <h2>Duplicate Finder</h2>
 This is a manual tool that may be run on an ELS Collection. System folders are not supported.
 Works locally or remotely.
-<p>
-This tool will not appear in the Jobs list of available tools.
+
+<p>This tool will not appear in the Jobs list of available tools.</p>
 
 <h3>Cross-check</h3>
 Normally duplicates are only checked within each library. With cross-check enabled items are
