--- a/src/com/groksoft/els/resources/sleep_en_US.html
+++ b/src/com/groksoft/els/resources/sleep_en_US.html
@@ -36,7 +36,7 @@
 This tool is used in Jobs to pause execution of a sequence of tasks. This is
 useful for coordinating multi-task jobs with remote ELS systems.
 
-Named configurations may be executed:
+<p>Named configurations may be executed:</p>
 <ul>
     <li>Using the Run button</li>
     <li>Added as a Task in a Job</li>
