Jobs UI changes for Origin handling & Operations for #73

--- a/src/com/groksoft/els/resources/operations_en_US.html
+++ b/src/com/groksoft/els/resources/operations_en_US.html
@@ -40,7 +40,7 @@ Named configurations may be executed:
 <ul>
   <li>Using the Run button</li>
   <li>Added as a Task in a Job</li>
-  <li>From the command line by copying the value from the Generate button</li>
+  <li>With a command line copy or shortcut using the Generate button</li>
 </ul>
 
 Respectively, the publisher and subscriber for execution come from:
