Refactor complete; continuing with #73

--- a/src/com/groksoft/els/resources/operations_en_US.html
+++ b/src/com/groksoft/els/resources/operations_en_US.html
@@ -33,7 +33,7 @@
 </head>
 <body>
 <h2>Operations</h2>
-<p>The Operations tab defines parameters and options for executing ELS in one of the
+<p>The Operations Tool defines parameters and options for executing ELS in one of the
 various modes.</p>
 <br/>
 Named configurations may be executed:
