--- a/src/com/groksoft/els/resources/operations_en_US.html
+++ b/src/com/groksoft/els/resources/operations_en_US.html
@@ -33,9 +33,9 @@
 </head>
 <body>
 <h2>Operations</h2>
-<p>The Operations Tool defines parameters and options for executing ELS in one of the
+<p>Operations define parameters and options for executing ELS in one of the
 various modes.</p>
-<br/>
+
 Named configurations may be executed:
 <ul>
   <li>Using the Run button</li>
@@ -43,27 +43,92 @@ Named configurations may be executed:
   <li>With a command line copy or shortcut using the Generate button</li>
 </ul>
 
-Respectively, the publisher and subscriber for execution come from:
+The publisher and subscriber for execution come from, respectively:
 <ul>
   <li>The currently loaded libraries in the ELS Navigator Browser</li>
-  <li>As parameters in the command line -p|-P and -s|-S</li>
   <li>From the defined Task Origins in a Job</li>
+  <li>As parameters in the command line -p|-P and -s|-S</li>
 </ul>
 
-<p>Targets : Specifying a targets file - that describes libraries, their sources,
-and the minimum free space for the library - is optional. It was the original
-way to define where new content would go and will continue to be supported.
-If targets are not specified ELS looks for "locations" defined in the library
-file. Locations describe minimum free space per storage location.</p>
+<h3>Modes</h3>
+ELS may be executed in one of the following modes and as a task in a Job. (* = Advanced)
+<ul>
+  <li>Local publish : Back-up with all storage connected to the local system</li>
+  <li>Remote publish : Back-up using two systems over a LAN or Internet</li>
+  <li>Subscriber listener : The subscribe-side for remote publish</li>
+  <li>Hint status server : Coordinate manual changes between multiple remote back-up systems, optional</li>
+  <li>Publisher terminal* : Manual terminal for a remote publisher listener</li>
+  <li>Publisher listener* : The publisher-side for a publisher terminal</li>
+  <li>Subscriber terminal* : Manual termina for a remote subscriber listener</li>
+  <li>Hint server force quit : Force a remote Hint Status Server to quit</li>
+  <li>Subscriber force quit : Force a remote subscriber listener to quit</li>
+</ul>
+
+<h3>Generate Button</h3>
+<p>The Generate button creates a command line for executing the currently-selected
+  operation. Edit and copy (Ctrl-C) as desired.</p>
+
+<h3>Options</h3>
+Listed alphabetically. The single-letter and long variations are listed.
+
+<h4>Authorize password</h4>
+Used with listeners to define the password a user would type interactively to gain
+access to higher-level commands. <dfn>Options:</dfn> -a | --authorize [password]
+
+<h4>Auth keys</h4>
+
+<h4>Blacklist</h4>
+
+<h4>Decimal scale</h4>
+
+<h4>Duplicates & Cross-check</h4>
+
+<h4>Empty directories</h4>
+
+<h4>Exclude</h4>
+
+<h4>Hint keys</h4>
+
+<h4>Hint keys only</h4>
+
+<h4>Hints</h4>
+
+<h4>Hint server</h4>
+
+<h4>Ignored</h4>
+
+<h4>Include/Exclude</h4>
+
+<h4>Keep going</h4>
+
+<h4>Navigator</h4>
+
+<h4>No back-fill</h4>
+
+<h4>Overwrite</h4>
+
+<h4>Preserve dates</h4>
+
+<h4>Quit Status Server</h4>
+
+<h4>Targets</h4>
+<p>Specifying a targets file that describes libraries, their sources,
+  and the minimum free space for the library - is optional. It was the original
+  way to define where new content would go and will continue to be supported.</p>
+
+<p>If targets are not specified ELS looks for "locations" defined in the library
+  file. Locations describe minimum free space per storage location.</p>
 
 <p>If those are not found the list of sources for the library in the library file
-is used with a default minimum free space of 10GB. In all cases the order of
-the definitions controls the order for searching where to place new content
-for that library.</p>
+  is used with a default minimum free space of 10GB. In all cases the order of
+  the definitions controls the order for searching where to place new content
+  for that library.</p>
 
-<h3>Generate</h3>
-The Generate button creates a command line for executing the currently-selected
-operation. Edit and copy (Ctrl-C) as desired.<br/>
+<h4>Validate</h4>
+
+<h4>Whitelist</h4>
+
+
 
 <br/>
 <br/>
