Libraries tab #64 code complete, requires more testing

--- a/src/com/groksoft/els/resources/controls_en_US.html
+++ b/src/com/groksoft/els/resources/controls_en_US.html
@@ -72,6 +72,7 @@
 </table>
 <ul>
     <li>Alt-letter and Alt-number combinations select menus and tabs.</li>
+    <li>Use Tab, Shift-Tab, Ctrl-Tab, and Ctrl-Shift-Tab to navigate panels.</li>
     <li>Speed search in a tree or table by typing .</li>
 </ul>
 </body>
