Libraries tab #64 edge case changes

--- a/src/com/groksoft/els/resources/libraries_en_US.html
+++ b/src/com/groksoft/els/resources/libraries_en_US.html
@@ -40,6 +40,8 @@
 <h3>Key Points</h3>
 
 <ol>
+  <li>Different types of repositories, e.g. Publisher, Subscriber and Hint Server, use different combinations of parameters.<br/><br/></li>
+  <li>A Hint Server only uses one Location, one Library with one Source for it's datastore.<br/><br/></li>
   <li>General tab, Host is the hostname:port or IP address:port used by outside ELS systems to connect to this ELS instance.<br/><br/></li>
   <li>General tab, Listen is the hostname:port or IP address:port listener operations use to listen for incoming connections. If not defined
     Host is used.<br/><br/></li>
