--- a/src/com/groksoft/els/resources/whitelist_en_US.html
+++ b/src/com/groksoft/els/resources/whitelist_en_US.html
@@ -33,6 +33,19 @@
 </head>
 <body>
 <h2>Whitelist</h2>
+<p>The Whitelist is a simple list of IPv4 IP addresses that are allowed to connect
+    to this instance when it is operating as a publisher or subscriber listener.</p>
+
+<p>The Whitelist is generally more useful than the Blacklist because it avoids
+    hacking attempts if a hacker finds the port used by ELS.</p>
+
+<p>The Whitelist, if defined, is evaluated first, then the Blacklist if defined. The
+    check is performed when a incoming connection is made but before the authentication
+    handshake is attempted between the systems. If the check fails the socket is
+    summarily closed and the occurrence is logged.</p>
+
+<p>NOTE: These options must be defined on the command line or in an Operation for them
+    to be used. The Navigator dialogs only edit the files.</p>
 
 </body>
 </html>
