--- a/src/com/groksoft/els/resources/hint-keys_en_US.html
+++ b/src/com/groksoft/els/resources/hint-keys_en_US.html
@@ -33,6 +33,17 @@
 </head>
 <body>
 <h2>Hint Keys</h2>
+<p>Hint Keys control Hint processing and which ELS instances are involved. These may
+include publishers and subscribers.</p>
+
+<p>A Hint Key is the "key" element from a collection JSON file.<br/><br/></p>
+
+<h3>UUID List Button</h3>
+<p>The UUID List button present a list of known collection files and displays the
+    "description" and "key" elements from each file found in the ELS ./libraries/ directory.</p>
+
+<p>NOTE: These options must be defined on the command line or in an Operation for them
+    to be used. The Navigator dialogs only edit the files.</p>
 
 </body>
 </html>
