--- a/src/com/groksoft/els/resources/libraries_en_US.html
+++ b/src/com/groksoft/els/resources/libraries_en_US.html
@@ -48,8 +48,12 @@
   <li>General tab, Terminal allowed provides interactive access to an ELS instance when running in a listener mode. It is primarily used for
     diagnostic purposes to test the STTY command channcel. The -a|--authorize [password] option is required to enable interactive access
     for the listener.<br/><br/></li>
-  <li>Locations tab defines devices or partial paths used to check for available free storage space. Partial paths to their length should match
-    the beginning of the full paths used in Library sources.<br/><br/></li>
+  <li>Locations tab defines devices or partial paths used to check for available free storage space. Fully-qualified partial paths to their
+    length should match the beginning of the full paths used in Library sources. Relative partial paths to their length should be contained
+    within the full paths used in Library sources. If a target for a backup, copy or move operation does not have a matching Location the
+    default minimum free space is 1 GB. A Target -t|-T file is still supported but is being phased-out in favor of Locations. There is no
+    Navigator dialog for editing targets JSON files however they may still be defined on the command-line. Defined Targets minimum free
+    space overrides Locations.<br/><br/></li>
   <li>Bibliography tab, Sources is the list of one or more storage devices or paths that comprise a library. The order of the sources
     defines the order searched for available free space, depending on the run-time setting of "Back-fill".</li>
 </ol>
