Progress on #116; Added option for start-up files; Added beginnings of Help, Getting Started

--- a/deploy/changes.html
+++ b/deploy/changes.html
@@ -36,6 +36,19 @@
 
 <p>Changes are listed with the new items on top.</p>
 
+<h3>22 September 2023</h3>
+<ul>
+    <li>For Navigator (only) added an option to use the last publisher and subscriber if <b>both</b> are not defined on the command line.</li>
+    <li>Added the bare beginnings of Help, Getting Started.</li>
+</ul>
+
+<h3>20 September 2023</h3>
+<ul>
+    <li>Fixed a variety of null pointers and rough spots when starting ELS Navigator with no configuration or libraries.</li>
+    <li>Further testing and tweaks required.</li>
+    <li>This is the startt of a "Getting Started" document as well.</li>
+</ul>
+
 <h3>18 September 2023</h3>
 <ul>
     <li>Added "Check for Updates" in the Navigator under the Help menu.</li>
