Fixed #120 and #121 restoring Publisher, Subscriber and Hint Tracking if publisher and subscriber are not given

--- a/deploy/changes.html
+++ b/deploy/changes.html
@@ -36,6 +36,13 @@
 
 <p>The most recent changes to ELS. We may miss things but try not to.</p>
 
+<h3>27 September 2023</h3>
+<ul>
+    <li>Fixed restoring publisher and subscriber (local or remote) if no arguments are given for the publisher and subscriber.</li>
+    <li>Added restoring Hint tracking if no publisher and subscriber are given.</li>
+    <li>Fixes bugs #120 and #121.</li>
+</ul>
+
 <h3>23 September 2023</h3>
 <ul>
     <li>Added Help, Changelist to display the changes in the installed version.</li>
