Fixed Updater bug caused by move from GrokSoft to Corionis

--- a/deploy/changes.html
+++ b/deploy/changes.html
@@ -38,6 +38,7 @@
 
 <h3>27 September 2023</h3>
 <ul>
+    <li>Fixed Updater bug caused during move from GrokSoft to Corionis.</li>
     <li>Fixed restoring publisher and subscriber (local or remote) if no arguments are given for the publisher and subscriber.</li>
     <li>Added restoring Hint tracking if no publisher and subscriber are given.</li>
     <li>Fixes bugs #120 and #121.</li>
@@ -45,7 +46,7 @@
 
 <h3>23 September 2023</h3>
 <ul>
-    <li>Added Help, Changelist to display the changes in the installed version.</li>
+    <li>Added Help, Changelist to display the changes in the installed build.</li>
     <li>Removed the rt directories from artifacts. Developers: Unpack the rt-archive files as needed.</li>
     <ul>
         <li>artifacts/stage/linux/ELS/rt/</li>
