Tweaked developer notes

--- a/deploy/changes.html
+++ b/deploy/changes.html
@@ -36,6 +36,14 @@
 
 <p>The most recent changes to ELS. We may miss things but try not to.</p>
 
+<h3>2 October 2023</h3>
+<ul>
+    <li>Made Navigator start-up more forgiving. ELS was originally a command line tool with rigid requirements.</li>
+    <li>Refactored Hint Keys, Hint Tracker and Hint Server setup.</li>
+    <li>Added macOS light & dark Look 'n Feel options in Settings, Appearance.</li>
+    <li>Fixed a bug when changing the Look 'n Feel that displayed an "A" on top of the various configuration name lists, e.g. left-side of Libraries, Jobs, etc.</li>
+</ul>
+
 <h3>27 September 2023</h3>
 <ul>
     <li>Fixed Updater bug caused during move from GrokSoft to Corionis.</li>
