#116 Tweaks related to #124 Libraries editing, there are many permutations to be covered

--- a/src/com/corionis/els/resources/operations_en_US.html
+++ b/src/com/corionis/els/resources/operations_en_US.html
@@ -73,6 +73,12 @@ ELS may be executed in one of the following modes and as a task in a Job. (* = A
 <h3>Options</h3>
 Listed alphabetically. The single-letter and long variations are listed.
 
+<h4>Navigator</h4>
+Notes:
+ 1. When using Navigator with a remote Subscriber only the General tab connection
+    information for the Subscriber is required. Navigator automatically requests
+    the current Subscriber Library at connection time.
+
 <h4>Authorize password</h4>
 Used with listeners to define the password a user would type interactively to gain
 access to higher-level commands. <dfn>Options:</dfn> -a | --authorize [password]
@@ -102,8 +108,6 @@ access to higher-level commands. <dfn>Options:</dfn> -a | --authorize [password]
 <h4>Include/Exclude</h4>
 
 <h4>Keep going</h4>
-
-<h4>Navigator</h4>
 
 <h4>No back-fill</h4>
 
