#124 editing paths in the Libraries tab has been completely rewritten

--- a/deploy/changes.html
+++ b/deploy/changes.html
@@ -38,7 +38,14 @@
 
 <h3>Known Bugs</h3>
 <ul>
-    <li>Drag 'n drop and copy/cut/paste work, except Linux copy/cut/paste from ELS to an outside application.</li>
+    <li>Drag 'n drop and copy/cut/paste work to and from ELS to outside applications, except Linux
+        copy/cut/paste from ELS. This is a known problem with Linux and Java.</li>
+</ul>
+
+<h3>19 October 2023</h3>
+<ul>
+    <li>Fixed editing paths in Libraries. See Issue #124 for details.</li>
+    <li>Fixed more focus-handling bugs that track what's selected and where.</li>
 </ul>
 
 <h3>11 October 2023</h3>
