--- a/src/com/corionis/els/resources/operations_en_US.html
+++ b/src/com/corionis/els/resources/operations_en_US.html
@@ -34,7 +34,7 @@
 <body>
 <h2>Operations</h2>
 <p>Operations define parameters and options for executing ELS in one of the
-various modes.</p>
+various modes. Paths are for the local system.</p>
 
 <p>
 Named configurations may be executed:
