--- a/deploy/changes.html
+++ b/deploy/changes.html
@@ -39,14 +39,7 @@
 <h3>Known Bugs</h3>
 <ul>
     <li>Drag 'n drop and copy/cut/paste work to and from ELS to outside applications, except Linux
-        and MacOS, that is also Linux, copy/cut/paste from ELS. This is a known problem with Linux and Java.</li>
-</ul>
-
-<h3>6 December 2023</h3>
-<ul>
-    <li>The initial implementation for macOS is code complete.</li>
-    <li>Added Corionis project ELS-MacOS-Image to build an ELS .app and DMG disk image.</li>
-    <li>Testing and adjusting ELS on MacOS before releasing on that platform.</li>
+        copy/cut/paste from ELS. This is a known problem with Linux and Java.</li>
 </ul>
 
 <h3>11 November 2023</h3>
