#139 Fixed Updater bug in ELS; Still testing

--- a/deploy/changes.html
+++ b/deploy/changes.html
@@ -39,7 +39,14 @@
 <h3>Known Bugs</h3>
 <ul>
     <li>Drag 'n drop and copy/cut/paste work to and from ELS to outside applications, except Linux
-        copy/cut/paste from ELS. This is a known problem with Linux and Java.</li>
+        and MacOS, that is also Linux, copy/cut/paste from ELS. This is a known problem with Linux and Java.</li>
+</ul>
+
+<h3>6 December 2023</h3>
+<ul>
+    <li>The initial implementation for macOS is code complete.</li>
+    <li>Added Corionis project ELS-MacOS-Image to build an ELS .app and DMG disk image.</li>
+    <li>Fixed an Updater bug.</li>
 </ul>
 
 <h3>11 November 2023</h3>
