#144 Completed basic macOS .tar.gz distribution; Working on docs and testing

--- a/src/com/corionis/els/resources/blacklist_en_US.html
+++ b/src/com/corionis/els/resources/blacklist_en_US.html
@@ -41,8 +41,9 @@
     handshake is attempted between the systems. If the check fails the socket is
     summarily closed and the occurrence is logged.</p>
 
-<p>NOTE: These options must be defined on the command line or in an Operation for them
-    to be used. The Navigator dialogs only edit the files.</p>
+<i><b>Note:</b></i>
+<p>This option must be defined on the command line with the <blockquote>-B | --blacklist [file]</blockquote> option
+or in a listener Operation for them to be used. These Navigator dialogs only edit the files.</p>
 
 </body>
 </html>
