--- a/src/com/corionis/els/resources/controls_en_US.html
+++ b/src/com/corionis/els/resources/controls_en_US.html
@@ -11,7 +11,6 @@
         }
 
         table {
-            border-bottom: 1px solid;
             margin: 0 4px 4px;
             padding: 4px;
             width: 100%;
@@ -34,46 +33,98 @@
 <body>
 <table>
     <tr>
-        <th>Function:</th> <th>Key/Mouse:</th>
-        <th>Function:</th> <th>Key/Mouse:</th>
+        <th>General:</th> <th>Key/Mouse:</th>
     </tr>
     <tr>
         <td>Copy</td> <td>Ctrl-C</td>
-        <td>Back</td> <td>Alt-Left, Mouse Back</td>
     </tr>
     <tr>
         <td>Cut</td> <td>Ctrl-X</td>
-        <td>Forward</td> <td>Alt-Right, Mouse Forward</td>
     </tr>
     <tr>
         <td>Paste</td> <td>Ctrl-V</td>
-        <td></td> <td></td>
-    </tr>
-    <tr>
-        <td></td> <td></td>
-        <td>Find</td> <td>Ctrl-F</td>
     </tr>
     <tr>
         <td>Delete</td> <td>Del</td>
-        <td>New Folder</td> <td>F7</td>
     </tr>
     <tr>
-        <td></td> <td></td>
-        <td>Rename</td> <td>F2</td>
+        <td><br/></td> <td></td>
     </tr>
     <tr>
-        <td>Next Pane</td> <td>Tab</td>
-        <td>Refresh</td> <td>F5</td>
+        <td>Back</td> <td>Alt-Left, Mouse Back</td>
+    </tr>
+    <tr>
+        <td>Forward</td> <td>Alt-Right, Mouse Forward</td>
     </tr>
     <tr>
         <td>Launch</td> <td>Enter, Double-Click</td>
+    </tr>
+    <tr>
+        <td>Next Pane</td> <td>Tab</td>
+    </tr>
+    <tr>
+        <td><br/></td> <td></td>
+    </tr>
+    <tr>
+        <td>New Folder</td> <td>F7</td>
+    </tr>
+    <tr>
+        <td>Refresh</td> <td>F5</td>
+    </tr>
+    <tr>
+        <td>Rename</td> <td>F2</td>
+    </tr>
+    <tr>
         <td>Show Hidden</td> <td>Ctrl-H</td>
     </tr>
+    <tr>
+        <td>Touch Date/Time</td> <td>Ctrl-T</td>
+    </tr>
+    <tr>
+        <td><br/></td> <td></td>
+    </tr>
+    <tr>
+        <th>Log Tab:</th> <th>&nbsp;</th>
+    </tr>
+    <tr>
+        <td>Find</td> <td>Ctrl-F</td>
+    </tr>
+    <tr>
+        <td>Find Next</td> <td>F3</td>
+    </tr>
+    <tr>
+        <td>Word Wrap</td> <td>Ctrl-R</td>
+    </tr>
+    <tr>
+        <td><br/></td> <td></td>
+    </tr>
+    <tr>
+        <th>Navigation:</th> <th>&nbsp;</th>
+    </tr>
+    <tr>
+        <td colspan="2">
+            &bull; Alt-letter and Alt-number combinations select menus and tabs.
+        </td>
+    </tr>
+    <tr colspan="2">
+        <td>
+            &bull; Tab, Shift-Tab, Ctrl-Tab, and Ctrl-Shift-Tab navigate panels.
+        </td>
+    </tr>
+    <tr>
+        <td><br/></td> <td></td>
+    </tr>
+    <tr>
+        <th>Search:</th> <th>&nbsp;</th>
+    </tr>
+    <tr>
+        <td colspan="2">
+            <i>&bull; Speed Search</i> in a tree or table by typing.
+        </td>
+    </tr>
 </table>
-<ul>
-    <li>Alt-letter and Alt-number combinations select menus and tabs.</li>
-    <li>Use Tab, Shift-Tab, Ctrl-Tab, and Ctrl-Shift-Tab to navigate panels.</li>
-    <li>Speed search in a tree or table by typing .</li>
-</ul>
+
+<br/>
+
 </body>
 </html>
