--- a/src/com/corionis/els/resources/jobs_en_US.html
+++ b/src/com/corionis/els/resources/jobs_en_US.html
@@ -61,13 +61,14 @@ combinations can be assembled that do not necessarily make sense or will execute
 
 <h3>Generate</h3>
 The Generate button creates a <i>basic</i> command line to execute the currently-selected
-job. Edit and copy (Ctrl-C) as desired.<br/>
+job. Edit and copy (Ctrl-C) as desired, or select the Shortcut button to create a
+desktop shortcut.<br/>
 <br/>
+<i><b>Note:</b></i><br/>
 Depending on your choices additional parameters may be required for the
-command line job to run correctly. In particular, if "<b>Any publisher</b>" or "<b>Any subscriber</b>" has
+command line to run correctly. In particular, if "<b>Any publisher</b>" or "<b>Any subscriber</b>" has
 been selected for the job then -p and/or -s parameters <i>will</i> needed.
 
-<br/>
 <br/>
 <br/>
 
