--- a/src/com/corionis/els/resources/authentication-keys_en_US.html
+++ b/src/com/corionis/els/resources/authentication-keys_en_US.html
@@ -44,8 +44,9 @@
 <p>The UUID List button presents a list of known collection files and displays the
 "description" and "key" elements from each file found in the ELS libraries/ directory.</p>
 
-<p>NOTE: These options must be defined on the command line or in an Operation for them
-    to be used. These Navigator dialogs only edit the files.</p>
+<i><b>Note:</b></i>
+<p>This option must be defined on the command line with the <blockquote>-A | --auth-keys [file]</blockquote> option
+or in an Operation for them to be used. These Navigator dialogs only edit the files.</p>
 
 </body>
 </html>
