--- a/src/com/corionis/els/resources/duplicatefinder_en_US.html
+++ b/src/com/corionis/els/resources/duplicatefinder_en_US.html
@@ -33,7 +33,7 @@
 </head>
 <body>
 <h2>Duplicate Finder</h2>
-This is a manual tool that may be run on an ELS Collection. System folders are not supported.
+This is a manually-executed tool that may be run on an ELS Collection. System folders are not supported.
 Works locally or remotely.
 
 <p>Because ELS and modern media systems span multiple storage devices a duplicate is currently
